<resources>
    <string name="app_name">SwiftSet</string>
    <string name="title_activity_exercise_selector">ExerciseSelector</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="field_eliminated">Eliminated</string>
    <string name="field_name">Name</string>
    <string name="field_primary">Primary</string>
    <string name="field_equipment">Equipment</string>
    <string name="field_movement">Movement</string>
    <string name="field_angle">Angle</string>
    <string name="field_tempo">Tempo</string>
    <string name="field_unilateral">Unilateral</string>
    <string name="field_joint">Joint</string>
    <string name="field_stability">Stability</string>
    <string name="field_sport">Sport</string>
    <string name="field_grip">Grip</string>
    <string name="field_url">Url</string>
    <string name="demo_video">Demo Video</string>
    <string name="select_button">Select</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_advanced_exercises">Enable advanced exercises</string>
    <string name="pref_description_advanced_exercises">Turn this off if you are a beginner to avoid being shown difficult exercises</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_hide_equipment">Hide Equipment</string>
    <string-array name="pref_exercises_list_titles">
        <item>Barbell</item>
        <item>Dumbbell</item>
        <item>Machine</item>
        <item>Bodyweight</item>
        <item>Cable</item>
        <item>Trap Bar</item>
        <item>Smith</item>
        <item>Landmine</item>
        <item>Weighted Belt</item>
        <item>Kettlebell</item>
        <item>Medball</item>
        <item>Stability Ball</item>
        <item>Bosu</item>
        <item>Chains</item>
        <item>Banded</item>
        <item>Sled</item>
        <item>Weight Plate</item>
        <item>Specialized Bars</item>
        <item>Glute Ham </item>
        <item>Hanging Band</item>
        <item>Direct Band</item>
        <item>Foam Roller</item>
        <item>Battle Rope</item>
        <item>TRX</item>
        <item>Other</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_notifications">Enable Swiftset Notificaitons</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_rate">Rate Swiftset</string>
    <string name="play_store_rating">Rate Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
