<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <SwitchPreference
        android:defaultValue="true"
        android:key="advanced_switch"
        android:summary="@string/pref_description_advanced_exercises"
        android:title="@string/pref_title_advanced_exercises" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
    -->
    <!--NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it.
    NOTE: ListPreference's summary should be set to its value by the activity code-->.

    <MultiSelectListPreference
        android:persistent="true"
        android:key="hidden_equipment"
        android:entries="@array/pref_exercises_list_titles"
        android:entryValues="@array/pref_exercises_list_titles"
        android:title="@string/pref_title_hide_equipment"/>
</PreferenceScreen>